# FTP-implementation-over-TCP

./: CMakeLists.txt  dataServer.cpp  remoteClient.cpp
